Updated hello.html page

--- a/web/hello.html
+++ b/web/hello.html
@@ -4,6 +4,18 @@
         <title>Hello World!</title>
     </head>
     <body>
-        <h1>Hello World!!</h1>
+        <header>Austin Kincade</header>
+        <div>
+            <h1>About Me</h1>
+            <p>
+                My name is Austin Kincade and I'm a senior here at BYU-Idaho.
+                I am studying Software Engineering with a minor in Mechanical
+                Engineering. I hope to potentially go into machine learing and
+                Artificial Intelligence. I am married to a beautiful woman 
+                named Brooke and have a handsome little boy Levi, with another
+                little one on the way.
+            </p>
+        </div>
+
     </body>
 </html>
