--- a/web/Home_Page/home_page_main.html
+++ b/web/Home_Page/home_page_main.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>Austin Kincade</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -26,6 +26,12 @@
       integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
       crossorigin="anonymous"
     ></script>
+    <style>
+      .carousel-inner img {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <!-- Navbar Code -->
@@ -81,16 +87,44 @@
         ></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="..." alt="First slide" />
+          <img
+            class="d-block w-100"
+            src="Photos/photo1.jpg"
+            alt="First slide"
+          />
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="..." alt="Second slide" />
+          <img
+            class="d-block w-100"
+            src="Photos/photo2.jpg"
+            alt="Second slide"
+          />
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="..." alt="Third slide" />
+          <img
+            class="d-block w-100"
+            src="Photos/photo3.jpg"
+            alt="Third slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="Photos/photo4.jpg"
+            alt="Third slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="Photos/photo5.jpg"
+            alt="Third slide"
+          />
         </div>
       </div>
       <a
