Put about me div in a container

--- a/web/Home_Page/home_page_main.html
+++ b/web/Home_Page/home_page_main.html
@@ -147,7 +147,7 @@
       </a>
     </div>
     <!-- End of Carousel -->
-    <div>
+    <div class="container">
       <h1>About Me</h1>
       <p>
         My name is Austin Kincade and I'm a senior here at BYU-Idaho. I am
