--- a/web/Home_Page/home_page_main.html
+++ b/web/Home_Page/home_page_main.html
@@ -55,9 +55,9 @@
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
-          <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">About Me</a></li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" href="#">GitHub</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -116,14 +116,14 @@
           <img
             class="d-block w-100"
             src="Photos/photo4.jpg"
-            alt="Third slide"
+            alt="Fourth slide"
           />
         </div>
         <div class="carousel-item">
           <img
             class="d-block w-100"
             src="Photos/photo5.jpg"
-            alt="Third slide"
+            alt="Fifth slide"
           />
         </div>
       </div>
