--- a/web/Home_Page/home_page_main.html
+++ b/web/Home_Page/home_page_main.html
@@ -146,7 +146,7 @@
       </a>
     </div>
     <!-- End of Carousel -->
-    <div class="container">
+    <div class="container" style="margin-top:1em">
       <h1>About Me</h1>
       <p>
         My name is Austin Kincade and I'm a senior here at BYU-Idaho. I am
